# frameworkintegration

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF5FrameworkIntegrationConfig.cmake.in  KF6FrameworkIntegrationConfig.cmake.in  README.md  metainfo.yaml  plasma_workspace.notifyrc
autotests/: CMakeLists.txt  kstyle_unittest.cpp
po/ar/: frameworkintegration5.po
po/ast/: frameworkintegration5.po
po/bs/: frameworkintegration5.po
po/ca/: frameworkintegration5.po
po/ca@valencia/: frameworkintegration5.po
po/cs/: frameworkintegration5.po
po/da/: frameworkintegration5.po
po/de/: frameworkintegration5.po
po/el/: frameworkintegration5.po
po/en_GB/: frameworkintegration5.po
po/es/: frameworkintegration5.po
po/fi/: frameworkintegration5.po
po/gd/: frameworkintegration5.po
po/gl/: frameworkintegration5.po
po/hu/: frameworkintegration5.po
po/ia/: frameworkintegration5.po
po/it/: frameworkintegration5.po
po/ja/: frameworkintegration5.po
po/ko/: frameworkintegration5.po
po/lt/: frameworkintegration5.po
po/nb/: frameworkintegration5.po
po/nds/: frameworkintegration5.po
po/nl/: frameworkintegration5.po
po/nn/: frameworkintegration5.po
po/pa/: frameworkintegration5.po
po/pl/: frameworkintegration5.po
po/pt/: frameworkintegration5.po
po/pt_BR/: frameworkintegration5.po
po/ro/: frameworkintegration5.po
po/ru/: frameworkintegration5.po
po/sk/: frameworkintegration5.po
po/sl/: frameworkintegration5.po
po/sr/: frameworkintegration5.po
po/sr@ijekavian/: frameworkintegration5.po
po/sr@ijekavianlatin/: frameworkintegration5.po
po/sr@latin/: frameworkintegration5.po
po/sv/: frameworkintegration5.po
po/tr/: frameworkintegration5.po
po/uk/: frameworkintegration5.po
po/x-test/: frameworkintegration5.po
po/zh_CN/: frameworkintegration5.po
po/zh_TW/: frameworkintegration5.po
src/: CMakeLists.txt
src/infopage/: CMakeLists.txt
src/integrationplugin/: CMakeLists.txt  frameworkintegrationplugin.cpp  frameworkintegrationplugin.h
src/kpackage-install-handlers/: CMakeLists.txt
src/kpackage-install-handlers/appstream/: CMakeLists.txt  main.cpp
src/kpackage-install-handlers/kns/: CMakeLists.txt  knshandlerversion.h.in  main.cpp
src/kstyle/: CMakeLists.txt  frameworkintegration-index.qdoc  kstyle.cpp  kstyle.h  kstyle.qdoc  kstyle.qdocconf
src/platformtheme/: frameworksintegration-5.16-font.sh  frameworksintegration-5.16-font.upd  kdeplatformfiledialoghelper.cpp
tests/: CMakeLists.txt  kstyletest.cpp
